--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Profile Section -->
   <section class="profile">
     <img src="https://via.placeholder.com/100" class="profile-pic" alt="Profile" />
-    <h2>@mohd_kaif</h2>
+    <h2>@priyanshu._.kashyap</h2>
     <p class="bio">Web enthusiast & coder ✨</p>
     <button id="followBtn">Follow</button>
   </section>
